added unit testing

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
           <label>Rating 1-5: <input type="number" class="number" min="1" max="5" data-ng-model="restaurant.rating"></label>
           <label>Cuisine: <input type="text" data-ng-model="restaurant.cuisine"></label>
           <button type="submit">Update!</button>
-          <button type="button" data-ng-click="resetForm(restaurant)">Or not...</button>
+          <button type="button" data-ng-click="resetForm(restaurant);">Or not...</button>
         </form>
 
         <section data-ng-if="!restaurant.editing">
