added basic auth, user must sign in to edit or add restaurants

--- a/app/html/sign_in.html
+++ b/app/html/sign_in.html
@@ -6,4 +6,6 @@
     <input type="password" name="password" data-ng-model="user.password" required>
     <button type="submit">Sign in</button>
   </form>
+  <label for="create">Not yet a user?</label>
+  <button data-ng-click="moveToCreate()">Click Here!</button>
 </section>
